--- a/src/pages/PatientInfoForm/PatientInfoForm.css
+++ b/src/pages/PatientInfoForm/PatientInfoForm.css
@@ -5,12 +5,14 @@
     margin-top: 1em;
 }
 .container-outer {
-    flex: 3;
+    flex: 2;
     display: flex;
     flex-direction: column;
     padding: 20px;
     gap: 20px;
     background-color: #E5F5FD;
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px lightgrey;
 }
 
 .flex-row {
@@ -20,15 +22,16 @@
 }
 
 .sub-heading {
-    font-size: 20px;
-    font-weight: 700;
+    font-size: 16px;
+    font-weight: normal;
 }
 
-.input-field, .long-input-field, .short-input-field{
+.input-field, .long-input-field, .short-input-field, .super-short-input-field{
     margin-right: auto;
     margin-left: 1.5em;
-    margin-top: 0.25em;
+    margin-top: 1em;
 }
+
 
 .input-field input {
     border: none;
@@ -37,20 +40,24 @@
     padding-left: 2em;
     padding-right: 10em;
     border-radius: 25px;
-    box-shadow: 2px 2px 2px lightgrey;
+    margin-top:0.5em;
+    box-shadow: 1px 1px 1px lightgrey;
 }
 
-.input-field-date input {
+.input-field-date {
     margin-right: auto;
     margin-left: 1.5em;
-    margin-top: 0.25em;
+    margin-top: 1em;
+}
+.input-field-date input {
     border: none;
     background-color: #f8f8f8;
     padding: 1em;
     padding-left: 2em;
     padding-right: 2em;
     border-radius: 25px;
-    box-shadow: 2px 2px 2px lightgrey;
+    margin-top:0.5em;
+    box-shadow: 1px 1px 1px lightgrey;
 }
 /* I didn't know how to make the boxes evenly distribute depending on the size of the outer div box :(  */
 .short-input-field input {
@@ -58,9 +65,21 @@
     background-color: #f8f8f8;
     padding: 1em;
     padding-left: 2em;
-    padding-right: 5em;
+    padding-right: 2em;
     border-radius: 25px;
-    box-shadow: 2px 2px 2px lightgrey;
+    margin-top:0.5em;
+    box-shadow: 1px 1px 1px lightgrey;
+}
+
+.super-short-input-field input{
+    border: none;
+    background-color: #f8f8f8;
+    padding: 1em;
+    padding-left: 2em;
+    padding-right: 0;
+    border-radius: 25px;
+    margin-top:0.5em;
+    box-shadow: 1px 1px 1px lightgrey;    
 }
 
 .long-input-field input {
@@ -68,21 +87,122 @@
     background-color: #f8f8f8;
     padding: 1em;
     padding-left: 2em;
-    padding-right: 5em;
+    padding-right: 34em;
+    margin-top:0.5em;
     border-radius: 25px;
-    box-shadow: 2px 2px 2px lightgrey;
+    box-shadow: 1px 1px 1px lightgrey;
+}
+
+.input-field select {
+    border: none;
+    background-color: #f8f8f8;
+    padding: 1em;
+    padding-left: 1em;
+    padding-right: 0;
+    margin-top:0.5em;
+    border-radius: 25px;
+    box-shadow: 1px 1px 1px lightgrey;
 }
 
 .contact-info-container {
     background-color: white;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    padding-right: 2em;
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px lightgrey;
 }
 
 .forms {
     display: flex;
     flex-direction: row;
+    margin-top: 2em;
+    margin-bottom: 2em;
 }
 
 .right-forms {
     flex: 2;
     margin-left: 2em;
 }
+
+.payment-info-form, .appt-details {
+    background-color: #F8F8F8;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px lightgrey;
+    margin-bottom: 1em;
+}
+
+.payment-selection, .look-discuss {
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px lightgrey;
+    margin-top: 1.25em;
+    padding-top: 0.25em;
+    padding-bottom: 1em;
+    padding-left: 2em;
+    padding-right: 2em;
+}
+
+.payment-selection p {
+    color: black;
+    margin: 0;
+    margin-top:1em;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    font-size: 12pt;
+}
+
+.payment-selection h3, .look-discuss h3 {
+    font-weight: normal;
+    font-size: 16pt;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+.select-fop label {
+    margin-left: 0.5em;
+}
+
+.appt-details {
+    margin-top: 2em;
+}
+
+.look-discuss input {
+    appearance: none;
+    padding: 0;
+    margin: 0;
+}
+.look-discuss label {
+    padding: 1em;
+    padding-top: 0.25em;
+    padding-bottom: 0.25em;
+    /* margin: 0.25em; */
+    border-radius: 25px;
+    background-color: #F8F8F8;
+    box-shadow: 1px 1px 1px lightgrey;
+    color: #717171;
+    font-size: 10pt;
+}
+.look-discuss input[type="checkbox"]:checked + label {
+    background-color: #2563EB; 
+    color: white;
+}
+
+.dis-options {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(1em, 1fr));
+    grid-auto-columns: auto auto auto 1fr;
+    grid-auto-columns: 1fr auto auto auto;
+    grid-auto-columns: 1fr auto;
+    gap: 5px;
+    grid-auto-flow: dense;
+    /* grid-template-columns: repeat(4, 1fr); */
+}
+
+.dis-check {
+    margin-bottom: 0.5em;
+}
+/* .look-discuss input:checked + .look-discuss label {
+    background-color: #2563EB;
+} */
