--- a/services/frontend/src/pages/PendingRequest/PendingRequest.css
+++ b/services/frontend/src/pages/PendingRequest/PendingRequest.css
@@ -7,7 +7,7 @@
 
 body {
     /* position: fixed; */
-    position:relative;
+    position: relative;
     width: 100%;
 
     overflow: scroll;
@@ -22,11 +22,11 @@ body {
     display: flex;
     flex-direction: row;
     max-width: 100%;
-    height: 850px;
+    height: 75vh;
 }
 
 h3 {
-    margin: 15px;
+    margin: 10px;
     font-size: 15px;
     /* margin-left: 30px; */
 }
@@ -35,14 +35,14 @@ h3 {
     /* margin-top: 10px; */
     font-size: 18px;
     font-weight: 100;
-    margin-left: 20px;
+    padding-top: 0.5em;
 }
 
 h5 {
     font-size: 11px;
     font-weight: 100;
-    margin-top: 10px;
-    margin-left: 20px;
+    padding: 1em;
+    padding-bottom: 0.5em;
 }
 
 .patient-details {
@@ -51,31 +51,34 @@ h5 {
     /* height: 70%;
     width: 30%; */
     border-radius: 5px;
-    padding: 10px;
-    padding-left: 1em;
+    padding: 1em 2em;
     margin-left: 0px;
     margin-top: 0px;
+    width: 70%;
     background-color: #efefef;
 }
 
+.patient-details p {
+    padding-left: 45px;
+}
+
 .patient-box {
-    /* border: 2px inset; */
-    background-color: white;
     box-shadow: 2px 2px 2px lightgrey;
-    /* margin-top: 20px; */
-    /* height: 370px; */
-    padding: 10px;
-    margin: 20px;
-    margin-left: 0px;
+    background-color: white;
+    padding: 20px;
+    margin: 0 0.5em;
+    overflow: scroll;
+    flex-grow: 1;
 }
 
 .PCI {
     margin-left: 15px;
     font-size: 18px;
 }
+
 .patient_identity {
-    margin-top: 20px;
-    margin-bottom: 10px;
+    margin-top: 25px;
+    margin-bottom: 5px;
     font-size: 13px;
     text-decoration: underline;
     text-underline-position: below;
@@ -93,9 +96,8 @@ h5 {
 }
 
 p {
-    margin-left: 45px;
-    color: #8c8989;
     font-size: 13px;
+    margin-bottom: -10px;
 }
 
 .tick {
@@ -111,6 +113,7 @@ p {
     margin-top: 10px;
     font-size: 13px;
 }
+
 .p-textSpecialization2 {
     margin-left: 20px;
     /* margin-top: 10px; */
@@ -141,190 +144,119 @@ p {
 }
 
 .comfirmation_box {
-    align-content: center;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     box-shadow: 2px 2px 2px lightgrey;
     border-radius: 5px;
-    padding: 10px;
+    padding: 1em 1.5em;
     margin-left: 20px;
     margin-right: 20px;
     margin-top: 0px;
     background: rgb(222, 246, 255);
-    width: 65%;
-    height: 70%;
-    margin-bottom: 20%;
+    width: 30%;
+    height: 100%;
+
 }
 
 .comfimation_twoBox {
     box-shadow: 2px 2px 2px lightgrey;
     background-color: white;
-    width: 40%;
-    height: fit-content;
-    /* margin-top: 20px; */
-    padding: 10px;
-    /* margin: 20px; */
-    margin-left: 30px;
-    margin-right: 20px;
+    padding: 20px;
+    flex-grow: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
 }
 
-.taskBox1 {
+.taskBox {
     box-shadow: 2px 2px 2px lightgrey;
     border-radius: 7px;
-    background-color: #60a96e;
-    max-height: 40px;
-    margin-top: 10px;
-    margin-bottom: 1px;
-    margin-left: 20px;
-    margin-right: 20px;
+    background-color: #efefef;
+    padding: .5em 1em;
+    color: #B3B3B3;
+    margin: 0.2em 0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
 }
 
-.taskBox1 p {
-    color: white;
-    margin-left: 5px;
-    margin-top: 0px;
-    padding: 5px;
-    font-size: 13px;
+div.taskBox:nth-child(2) {
+    background-color: #63BC9B;
+    color: #FFFFFF;
 }
 
-.taskBox2 {
-    box-shadow: 2px 2px 2px lightgrey;
-    border-radius: 7px;
-    background-color: rgb(25, 119, 241);
-    max-height: 70px;
-    margin-top: 5px;
-    margin-bottom: 1px;
-    margin-left: 20px;
-    margin-right: 20px;
+div.taskBox:nth-child(3) {
+    background-color: #2563EB;
+    color: #FFFFFF;
 }
 
-.taskBox2 p {
-    color: white;
-    margin-left: 5px;
-    margin-top: 1px;
-    padding: 10px;
-    font-size: 13px;
+div.taskBox:nth-child(4) {
+    background-color: #38BDF8;
+    color: #FFFFFF;
 }
 
-.taskBox3 {
-    box-shadow: 2px 2px 2px lightgrey;
-    border-radius: 7px;
-    background-color: rgb(24, 168, 245);
-    max-height: 70px;
-    margin-top: 10px;
-    margin-bottom: 1px;
-    margin-left: 20px;
-    margin-right: 20px;
+div.taskBox:nth-child(8) {
+    border-radius: 2em;
 }
 
-.taskBox3 p {
-    color: white;
-    margin-left: 5px;
-    margin-top: 1px;
-    padding: 10px;
-    font-size: 13px;
-}
 
 .negative {
     font-size: 20px;
     border-radius: 50%;
-    margin-left: auto;
-    margin-top: 6px;
-    margin-right: 30px;
 
 }
 
-.taskBox4,
-.taskBox5 {
-    box-shadow: 2px 2px 2px lightgrey;
-    border-radius: 7px;
-    background-color: #efefef;
-    max-height: 90px;
-    margin-top: 10px;
-    margin-bottom: 1px;
-    margin-left: 20px;
-    margin-right: 20px;
-}
 
-.taskBox4 p,
-.taskBox5 p,
-.taskBox6 p {
-    color: rgb(138, 133, 133);
-    margin-left: 5px;
-    margin-top: 3px;
-    padding: 10px;
+.taskBox span {
     font-size: 13px;
+    padding: .2em;
 }
 
 .positive {
     font-size: 20px;
     font-weight: bolder;
     border-radius: 50%;
-    margin-left: auto;
-    margin-top: 6px;
-    margin-right: 30px;
-}
-
-.taskBox6 {
-    box-shadow: 2px 2px 2px lightgrey;
-    border-radius: 50px;
-    background-color: #efefef;
-    margin-top: 10px;
-    margin-bottom: 1px;
-    margin-left: 20px;
-    margin-right: 20px;
 }
 
 .drop-down {
-    font-size: 40px;
+    font-size: 15px;
     font-weight: bolder;
     border-radius: 50%;
     margin-left: auto;
-    margin-top: 6px;
-    margin-right: 30px;
 }
 
 .updateStatus {
-    box-shadow: 2px 2px 2px lightgrey;
-    background-color: white;
-    width: 84%;
-    margin-top: 10px;
-    padding: 10px;
-    margin: 20px;
-    margin-left: 30px;
-    margin-right: 20px;
-}
-
-.updateStatus h4 {
-    font-size: 13px;
-    text-align: center;
-    margin-top: 5px;
-    margin-bottom: 5px;
-}
-
-.update-status-buttons {
     display: flex;
-    flex-direction: row;
-    justify-content: end;
-    margin-right: 1em;
-    margin-left: auto;
+    justify-content: space-evenly;
+    align-items: last baseline;
+    flex-grow: 1;
 }
+
+.updateStatus button {
+    border-radius: 2em;
+    border: none;
+    padding: 0.5em 2em;
+}
+
 .accept {
-    margin-right: 2em;
-
-}
-
-.decline {
-    /* position: absolute; */
-    margin-left: 2em;
-    background: #EB3D25;
-    background: #FFFFFF;
+    background-color: #2563EB;
+    color: white;
 }
 
 .flex-container p {
-    font-size:13px;
+    font-size: 13px;
 }
 
 
 .flex-container-pr {
     display: flex;
     flex-direction: row;
+    align-items: stretch;
+}
+
+.patient-details p {
+    color: #8c8989;
 }
