--- a/src/pages/SelectClinician/SelectClinician.css
+++ b/src/pages/SelectClinician/SelectClinician.css
@@ -52,7 +52,7 @@
   margin-right: auto;
   padding-left: 2em;
   padding-right: 2em;
-  padding-top: 3em;
+  padding-top: 1em;
   padding-bottom: 1em;
   background-color: white;
   border-top: solid 3px #63BC9B;
@@ -67,6 +67,7 @@
 
 .request-2 img {
   display: block;
+  padding-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
 }
