--- a/src/pages/PatientInfoForm/PatientInfoForm.css
+++ b/src/pages/PatientInfoForm/PatientInfoForm.css
@@ -175,15 +175,14 @@
     margin: 0;
 }
 .look-discuss label {
-    padding: 1em;
-    padding-top: 0.25em;
-    padding-bottom: 0.25em;
+    /* padding: 1em; */
+    padding: 10px 20px;
     /* margin: 0.25em; */
     border-radius: 25px;
     background-color: #F8F8F8;
     box-shadow: 1px 1px 1px lightgrey;
     color: #717171;
-    font-size: 10pt;
+    font-size: 12pt;
 }
 .look-discuss input[type="checkbox"]:checked + label {
     background-color: #2563EB; 
@@ -191,18 +190,14 @@
 }
 
 .dis-options {
-    display: grid;
-    grid-template-columns: repeat(4, minmax(1em, 1fr));
-    grid-auto-columns: auto auto auto 1fr;
-    grid-auto-columns: 1fr auto auto auto;
-    grid-auto-columns: 1fr auto;
-    gap: 5px;
-    grid-auto-flow: dense;
-    /* grid-template-columns: repeat(4, 1fr); */
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
 
 .dis-check {
     margin-bottom: 0.5em;
+    padding: 10px 5px;
 }
 
 .schedule-button {
